<resources>
    <string name="app_name">Rivier Chat</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Confirm password</string>
    <string name="err_msg_name">Enter full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="title_activity_chat_room_discussion">ChatRoomDiscussionActivity</string>
    <string name="action_logout">Logout</string>
    <string name="choose_profession">Choose Profession</string>
    <string name="register">Register</string>

    <string-array name="user_types">
        <item>Student</item>
        <item>Professor</item>
    </string-array>
</resources>
